# multimodulon

./: .gitignore  .readthedocs.yaml  LICENSE  NRE_IMPROVEMENTS.md  README.md  example_new_usage.py  example_usage.py  metric_explanation.md  multimodulon_demo.ipynb  pyproject.toml  requirements.txt  test_bbh_format.py  test_imports.py  test_stability.py
docs/: changelog.rst  conf.py  data_preparation.rst  error_report.rst  gene_alignment.rst  index.rst  initialization.rst  installation.rst  multiview_ica.rst  optimization.rst  quickstart.rst  requirements.txt  threshold_optimization.rst  visualization.rst
docs/api/: core.rst  gene_alignment.rst  optimization.rst  utilities.rst  visualization.rst
docs/examples/: basic_workflow.rst  characterization_core_components.ipynb  characterization_unique_components.ipynb  characterization_unique_components.rst  visualization_tutorial.rst
docs/source/: changelog.rst  conf.py  contributing.rst  gene_alignment.rst  index.rst  optimization.rst
docs/source/api/: multiview_ica.rst
docs/source/examples/: basic_workflow.rst  optimization_tutorial.rst  visualization_tutorial.rst
external_tools/eggnog_mapper/: run_eggnog_mapper.sh
multimodulon/: __init__.py  core.py  core_io.py  gene_alignment.py  gff_utils.py  multiview_ica.py  multiview_ica_optimization.py  optimization.py  plotting.py  species_data.py  stability.py  utils.py
multimodulon/utils/: __init__.py  bbh.py  fasta_utils.py  gff_parser.py
multimodulon_backup/: __init__.py  gene_alignment.py  gff_utils.py  optimization.py
multimodulon_backup/utils/: bbh.py
notebooks/: 1_Create_MultiModulon_object.ipynb  2_Chracterizing_Core_iModulons.ipynb  3_Chracterizing_Unique_iModulons.ipynb.ipynb
tests/: __init__.py  test_core.py  test_gff_parser.py
