[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodulon"
version = "0.1.0"
description = "A Python package for analyzing multi-species RNA-seq expression profiles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "MultiModulon Development Team", email = "dev@multimodulon.org" }
]
keywords = ["bioinformatics", "RNA-seq", "multi-species", "expression-analysis", "modulon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "biopython>=1.81,<2.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "ipywidgets>=8.0.0,<9.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "geotorch==0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/multimodulon"
"Bug Tracker" = "https://github.com/yourusername/multimodulon/issues"
"Documentation" = "https://github.com/yourusername/multimodulon#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["multimodulon*"]

[tool.setuptools.package-data]
multimodulon = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]